fix: change api structure to meet requirements
