# docs/swagger.json
@@ -7,67 +7,6 @@
     },
     "host": "localhost:8000",
     "paths": {
-        "/account/{accountId}/complete": {
-            "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Завершает заявку на счёт, обновляя её статус по ID заявки.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "accounts"
-                ],
-                "summary": "Завершение заявки на счёт",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID заявки на счёт",
-                        "name": "accountId",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Данные для завершения заявки",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handler.completeAccountRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Заявка на счёт успешно завершена"
-                    },
-                    "400": {
-                        "description": "Неверный запрос",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Заявка на счёт не найдена",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/accounts": {
             "get": {
                 "security": [
@@ -273,6 +212,67 @@
                 "responses": {
                     "200": {
                         "description": "Заявка на счёт успешно удалена"
+                    },
+                    "400": {
+                        "description": "Неверный запрос",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Заявка на счёт не найдена",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/accounts/{accountId}/complete": {
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Завершает заявку на счёт, обновляя её статус по ID заявки.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Завершение заявки на счёт",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID заявки на счёт",
+                        "name": "accountId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Данные для завершения заявки",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.completeAccountRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Заявка на счёт успешно завершена"
                     },
                     "400": {
                         "description": "Неверный запрос",
@@ -652,7 +652,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Договор успешно обновлен"
+                        "description": "Договор успешно обновлен",
+                        "schema": {
+                            "$ref": "#/definitions/handler.contractResponse"
+                        }
                     },
                     "400": {
                         "description": "Неверный запрос",
@@ -813,7 +816,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Изображение успешно обновлено"
+                        "description": "Изображение успешно обновлено",
+                        "schema": {
+                            "$ref": "#/definitions/handler.contractResponse"
+                        }
                     },
                     "400": {
                         "description": "Неверный запрос",
@@ -1203,7 +1209,7 @@
                     "type": "string"
                 },
                 "creator": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "finishedAt": {
                     "type": "string"
@@ -1212,7 +1218,7 @@
                     "type": "integer"
                 },
                 "moderator": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "number": {
                     "type": "string"
@@ -1235,7 +1241,7 @@
                     "type": "string"
                 },
                 "creator": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "finishedAt": {
                     "type": "string"
@@ -1244,7 +1250,7 @@
                     "type": "integer"
                 },
                 "moderator": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "number": {
                     "type": "string"
